@@ -812,6 +812,24 @@ export const runSafeRun = async (options: SafeRunCliOptionsV0): Promise<number> 
       console.error("[SAFE_RUN_OUT_PATH_INVALID] unable to inspect --out path.");
       return 40;
     }
+  } else {
+    let probe = path.dirname(path.resolve(finalOutDir));
+    while (probe && !fs.existsSync(probe)) {
+      const parent = path.dirname(probe);
+      if (parent === probe) break;
+      probe = parent;
+    }
+    if (probe && fs.existsSync(probe)) {
+      try {
+        if (!fs.statSync(probe).isDirectory()) {
+          console.error("[SAFE_RUN_OUT_PATH_PARENT_NOT_DIRECTORY] parent of --out must be a directory.");
+          return 40;
+        }
+      } catch {
+        console.error("[SAFE_RUN_OUT_PATH_INVALID] unable to inspect --out path.");
+        return 40;
+      }
+    }
   }
   const adapterPolicyFile = String(process?.env?.[ADAPTER_DISABLE_FILE_ENV_V1] || "").trim();
   if (adapterPolicyFile && pathsOverlap(adapterPolicyFile, finalOutDir)) {
